// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis compute globals hash 1`] = `
Fr {
  "asBigInt": 19996198784166720428914107076917074510032365849254400404611644441094528984289n,
  "asBuffer": {
    "data": [
      44,
      53,
      114,
      139,
      52,
      188,
      28,
      197,
      40,
      157,
      117,
      130,
      246,
      163,
      68,
      239,
      11,
      227,
      228,
      184,
      250,
      189,
      231,
      11,
      41,
      32,
      78,
      168,
      174,
      60,
      100,
      225,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis compute private call stack item hash 1`] = `
Fr {
  "asBigInt": 3230879723118793997125108252427471059552102155544558929105689542823769599571n,
  "asBuffer": {
    "data": [
      7,
      36,
      156,
      245,
      105,
      70,
      179,
      10,
      128,
      189,
      85,
      143,
      184,
      14,
      255,
      238,
      59,
      2,
      250,
      190,
      165,
      228,
      189,
      154,
      182,
      111,
      18,
      122,
      180,
      216,
      238,
      83,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis compute public call stack item hash 1`] = `
Fr {
  "asBigInt": 1369626479296628599511967895314683808250163038382688147156251959177959447826n,
  "asBuffer": {
    "data": [
      3,
      7,
      46,
      93,
      156,
      140,
      48,
      165,
      187,
      71,
      235,
      199,
      129,
      159,
      8,
      25,
      33,
      227,
      241,
      253,
      4,
      14,
      185,
      7,
      30,
      112,
      136,
      232,
      202,
      252,
      29,
      18,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis compute secret message hash 1`] = `
Fr {
  "asBigInt": 6220068662483113241527007349428551778669520744131373768997518428761948042030n,
  "asBuffer": {
    "data": [
      13,
      192,
      111,
      33,
      103,
      226,
      205,
      25,
      173,
      247,
      56,
      209,
      243,
      132,
      105,
      215,
      248,
      191,
      241,
      226,
      107,
      2,
      152,
      22,
      232,
      35,
      11,
      205,
      106,
      182,
      51,
      46,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis compute tx hash 1`] = `
Fr {
  "asBigInt": 11028384086470399424960241201065432836500251313078792361310973684322431200173n,
  "asBuffer": {
    "data": [
      24,
      97,
      216,
      28,
      219,
      86,
      198,
      156,
      231,
      143,
      46,
      78,
      221,
      7,
      18,
      240,
      152,
      126,
      198,
      240,
      27,
      12,
      209,
      163,
      188,
      112,
      63,
      126,
      44,
      152,
      235,
      173,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "asBigInt": 11147987456032716744065611270804907827731877483785437429582589518717493164615n,
    "asBuffer": {
      "data": [
        24,
        165,
        137,
        140,
        101,
        163,
        155,
        231,
        234,
        167,
        7,
        107,
        97,
        180,
        211,
        70,
        191,
        71,
        74,
        128,
        186,
        41,
        12,
        41,
        175,
        241,
        177,
        251,
        13,
        23,
        186,
        71,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "asBigInt": 12921923968526873580423865450965452589013784321633824918807523389752605479568n,
    "asBuffer": {
      "data": [
        28,
        145,
        140,
        190,
        160,
        180,
        72,
        234,
        8,
        38,
        34,
        189,
        150,
        49,
        183,
        78,
        127,
        175,
        204,
        179,
        163,
        133,
        166,
        183,
        238,
        243,
        37,
        56,
        25,
        29,
        18,
        144,
      ],
      "type": "Buffer",
    },
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "asBigInt": 1n,
      "asBuffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          1,
        ],
        "type": "Buffer",
      },
    },
    "y": Fr {
      "asBigInt": 2n,
      "asBuffer": {
        "data": [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          2,
        ],
        "type": "Buffer",
      },
    },
  },
}
`;

exports[`abis computes a contract address from partial 1`] = `
AztecAddress {
  "asBigInt": 15451914702384811781262267264665450579243110288870049455159710794697789874663n,
  "asBuffer": {
    "data": [
      34,
      41,
      121,
      74,
      138,
      50,
      100,
      6,
      122,
      50,
      114,
      42,
      84,
      48,
      151,
      243,
      88,
      162,
      160,
      249,
      55,
      16,
      237,
      195,
      114,
      27,
      106,
      66,
      228,
      123,
      33,
      231,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes a function leaf 1`] = `
Fr {
  "asBigInt": 8957681167943973616438847631514238173699549883609341685749385526208761312950n,
  "asBuffer": {
    "data": [
      19,
      205,
      222,
      44,
      215,
      32,
      246,
      85,
      182,
      194,
      113,
      211,
      193,
      23,
      61,
      121,
      173,
      10,
      133,
      48,
      24,
      129,
      231,
      172,
      246,
      68,
      18,
      40,
      227,
      134,
      54,
      182,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis computes block hash with globals 1`] = `
Fr {
  "asBigInt": 7177915431153102916601456081755280584460785548870192083974540199919775120827n,
  "asBuffer": {
    "data": [
      15,
      222,
      142,
      96,
      169,
      217,
      84,
      90,
      55,
      110,
      52,
      172,
      167,
      236,
      97,
      56,
      185,
      98,
      133,
      50,
      113,
      88,
      184,
      54,
      59,
      75,
      252,
      181,
      66,
      59,
      253,
      187,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes commitment nonce 1`] = `
Fr {
  "asBigInt": 7653394882992289714855533169019502055399179742531912347686813547951736946253n,
  "asBuffer": {
    "data": [
      16,
      235,
      171,
      1,
      188,
      129,
      50,
      99,
      239,
      146,
      237,
      113,
      185,
      199,
      129,
      173,
      62,
      245,
      128,
      25,
      182,
      106,
      143,
      113,
      48,
      77,
      47,
      114,
      215,
      222,
      254,
      77,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes contract leaf 1`] = `
Fr {
  "asBigInt": 16936439505140127403707082829495438425474294111732402569080458144683824428771n,
  "asBuffer": {
    "data": [
      37,
      113,
      175,
      95,
      213,
      5,
      72,
      186,
      142,
      170,
      107,
      231,
      135,
      49,
      45,
      131,
      55,
      162,
      222,
      230,
      65,
      158,
      24,
      95,
      238,
      19,
      196,
      149,
      177,
      246,
      182,
      227,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes function tree root 1`] = `
Fr {
  "asBigInt": 18902231782334398705464257251364974449663398212058621439366133672872128659209n,
  "asBuffer": {
    "data": [
      41,
      202,
      72,
      183,
      227,
      53,
      212,
      51,
      133,
      173,
      223,
      25,
      183,
      14,
      155,
      5,
      105,
      58,
      143,
      86,
      204,
      9,
      239,
      140,
      187,
      195,
      116,
      164,
      13,
      173,
      191,
      9,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes public data tree index 1`] = `
Fr {
  "asBigInt": 9076808949980998475110411569159266589807853958487763065147292518713994520820n,
  "asBuffer": {
    "data": [
      20,
      17,
      74,
      179,
      219,
      221,
      10,
      28,
      204,
      92,
      79,
      230,
      141,
      213,
      118,
      243,
      198,
      205,
      121,
      112,
      135,
      112,
      224,
      106,
      180,
      8,
      99,
      152,
      205,
      216,
      40,
      244,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes public data tree value 1`] = `
Fr {
  "asBigInt": 3n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      3,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes siloed commitment 1`] = `
Fr {
  "asBigInt": 7262347077404413274044670947879391583109741657896097604752287127491776887739n,
  "asBuffer": {
    "data": [
      16,
      14,
      87,
      192,
      122,
      182,
      219,
      134,
      244,
      174,
      67,
      245,
      167,
      212,
      53,
      92,
      87,
      197,
      161,
      226,
      82,
      55,
      70,
      224,
      251,
      22,
      172,
      41,
      240,
      220,
      59,
      187,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes siloed nullifier 1`] = `
Fr {
  "asBigInt": 10521714890263159342521589827909786073566333899903358017581007142888032736115n,
  "asBuffer": {
    "data": [
      23,
      67,
      20,
      95,
      222,
      16,
      62,
      170,
      136,
      175,
      87,
      110,
      5,
      98,
      230,
      29,
      133,
      235,
      165,
      144,
      253,
      223,
      1,
      209,
      149,
      80,
      228,
      240,
      36,
      112,
      147,
      115,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes unique commitment 1`] = `
Fr {
  "asBigInt": 13000121189816960667906065043973697710794195579570622293955220571859166513128n,
  "asBuffer": {
    "data": [
      28,
      189,
      206,
      206,
      196,
      254,
      146,
      246,
      99,
      142,
      182,
      168,
      218,
      222,
      150,
      202,
      53,
      142,
      203,
      164,
      149,
      76,
      245,
      151,
      195,
      99,
      25,
      159,
      174,
      61,
      71,
      232,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis computes zero contract leaf 1`] = `
Fr {
  "asBigInt": 0n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes VK 1`] = `
{
  "data": [
    4,
    129,
    16,
    102,
    127,
    128,
    176,
    47,
    119,
    183,
    215,
    68,
    151,
    102,
    87,
    206,
    169,
    167,
    197,
    241,
    221,
    35,
    64,
    234,
    28,
    87,
    154,
    126,
    191,
    213,
    78,
    85,
  ],
  "type": "Buffer",
}
`;

exports[`abis hashes a tx request 1`] = `
{
  "data": [
    24,
    97,
    216,
    28,
    219,
    86,
    198,
    156,
    231,
    143,
    46,
    78,
    221,
    7,
    18,
    240,
    152,
    126,
    198,
    240,
    27,
    12,
    209,
    163,
    188,
    112,
    63,
    126,
    44,
    152,
    235,
    173,
  ],
  "type": "Buffer",
}
`;

exports[`abis hashes constructor info 1`] = `
Fr {
  "asBigInt": 8554563246648466207128694080427818093826588702256491720155365584899927973422n,
  "asBuffer": {
    "data": [
      18,
      233,
      182,
      18,
      27,
      239,
      249,
      139,
      157,
      45,
      92,
      189,
      121,
      152,
      157,
      73,
      211,
      211,
      253,
      135,
      52,
      199,
      134,
      233,
      242,
      74,
      6,
      239,
      86,
      0,
      30,
      46,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes empty function args 1`] = `
Fr {
  "asBigInt": 0n,
  "asBuffer": {
    "data": [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes function args 1`] = `
Fr {
  "asBigInt": 11839099223661714814196842233383119055519657007373713796026764119292399532830n,
  "asBuffer": {
    "data": [
      26,
      44,
      177,
      84,
      151,
      13,
      83,
      84,
      26,
      98,
      206,
      96,
      113,
      195,
      152,
      109,
      8,
      146,
      63,
      234,
      71,
      75,
      232,
      160,
      170,
      26,
      191,
      135,
      24,
      39,
      59,
      30,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis hashes many function args 1`] = `
Fr {
  "asBigInt": 9368119665570837995905174888524883816390941475336228173888734493993721486827n,
  "asBuffer": {
    "data": [
      20,
      182,
      42,
      246,
      214,
      208,
      1,
      110,
      254,
      196,
      157,
      194,
      3,
      246,
      106,
      69,
      102,
      180,
      241,
      249,
      168,
      116,
      85,
      53,
      209,
      138,
      127,
      164,
      10,
      109,
      93,
      235,
    ],
    "type": "Buffer",
  },
}
`;
